Github Push Test

--- a/forum.html
+++ b/forum.html
@@ -24,7 +24,7 @@
 	</div>
   <body>
 	<div>
-	  Coming soon... If we Learn about it
+	  Testing Github remote push
 	</div>
 	<footer>
       <p class="text-center">this is a footer</p>
