--- a/index.html
+++ b/index.html
@@ -3,21 +3,35 @@
     <link rel="stylesheet" href="style.css">
 	<link rel="icon" href="favi.png" type="image/gif" sizes="16x16">
 </head>
-  <h1 id="header1">
-  MORDPENDIUM
-  <form id="login">
-    <input type="button" value="Login">
-  </form>
-  </h1>
-  <h2 id="header2">
-  Mordheim Warband Builder
-  </h2>
+
+	<span id="headspan">
+	<h1 id="header1">
+	MORDPENDIUM
+	</h1>
+	<h2 id="header2">
+	Mordheim Warband Builder
+	</h2>
+	</span>
+  
+	<span id="loginbox">
+	<form>
+		<input type="text" value="username">
+	</form>
+	<form>
+		<input type="password" value="Password">
+	</form>
+	<form id = "submitlogin">
+		<input type="button" value="Login">
+	</form>
+	</span>
+  
   <ul id="nav_pane">
 	<li><a href="index.html">Home</a></li>
 	<li><a href="forum.html">Forum</a></li>
 	<li><a href="warbands.html">Warbands</a></li>
 	<li><a href="rules.html">Rules</a></li>
   </ul>
+  
   <body>
     <div class="main-container">
     <div class="leftcolumn">
