--- a/warbands.html
+++ b/warbands.html
@@ -4,15 +4,28 @@
     <link rel="stylesheet" href="warband.css">
 	<link rel="icon" href="favi.png" type="image/gif" sizes="16x16">
 </head>
-  <h1 id="header1">
-  MORDPENDIUM
-  <form id="login">
-    <input type="button" value="Login">
-  </form>
-  </h1>
-  <h2 id="header2">
-  Mordheim Warband Builder
-  </h2>
+
+	<span id="headspan">
+	<h1 id="header1">
+	MORDPENDIUM
+	</h1>
+	<h2 id="header2">
+	Mordheim Warband Builder
+	</h2>
+	</span>
+ 
+	<span id="loginbox">
+	<form>
+		<input type="text" value="username">
+	</form>
+	<form>
+		<input type="password" value="Password">
+	</form>
+	<form id = "submitlogin">
+		<input type="button" value="Login">
+	</form>
+	</span>
+  
   <ul id="nav_pane">
 	<li><a href="index.html">Home</a></li>
 	<li><a href="forum.html">Forum</a></li>
@@ -72,7 +85,7 @@
 		<span id ='skills'>
 		Skills: Combat, Speed, special, minimim
 		</span>
-		<span class ='large_bold'>
+		<span id ='xpspan' class ='large_bold'>
 		EXP:
 		</span>
 		<span id = "xp">
