--- a/warbands.html
+++ b/warbands.html
@@ -16,10 +16,10 @@
  
 	<span id="loginbox">
 	<form>
-		<input type="text" value="username">
+		<input type="text" placeholder="Username">
 	</form>
 	<form>
-		<input type="password" value="Password">
+		<input type="password" placeholder="Password">
 	</form>
 	<form id = "submitlogin">
 		<input type="button" value="Login">
